# MsgpackSearch

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
src/: CMakeLists.txt  main.cpp  main.h
src/msgpacksearch/: CMakeLists.txt  error.h  msgpacksearch.cpp  msgpacksearch.h  object.h  types.h
test/: CMakeLists.txt  test_msgpacksearch.cpp
